--- a/Source/02_HTML_CSS/Ch06_쇼핑몰/shoppingmall.html
+++ b/Source/02_HTML_CSS/Ch06_쇼핑몰/shoppingmall.html
@@ -4,13 +4,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
   <title></title>
-  <style>
-    
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="css/shoppingmall.css" 
+      rel="stylesheet" type="text/css">
 </head>
 <body>
-  <header></header>
-  <div id="content"></div>
-  <footer></footer>
+  <header>
+    <div class="gnb">
+      <ul>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Join Us</a></li>
+        <li><a href="#">Wish List</a></li>
+        <li><a href="#">Cart</a></li>
+        <li><a href="#">Order</a></li>
+        <li><a href="#">My Page</a></li>
+        <li><a href="#">Notice</a></li>
+        <li><a href="#">QnA</a></li>
+        <li><a href="#">Review</a></li>
+        <li><a href="#">Favorite</a></li>
+      </ul>
+    </div>
+    <div class="logo">LOGO</div>
+    <div class="hitmenu">
+      <ul>
+        <li><a href="#">hit4</a></li>
+        <li><a href="#">hit3</a></li>
+        <li><a href="#">hit2</a></li>
+        <li><a href="#">hit1</a></li>
+      </ul>
+    </div>
+    <div class="lnb">
+      <ul>
+        <li><a href="#">menu1</a></li>
+        <li><a href="#">menu2</a></li>
+        <li><a href="#">menu3</a></li>
+        <li><a href="#">menu4</a></li>
+        <li><a href="#">menu5</a></li>
+        <li><a href="#">menu6</a></li>
+        <li><a href="#">menu7</a></li>
+        <li><a href="#">menu8</a></li>
+      </ul>
+    </div>
+  </header>
+  <div id="content">
+    <div class="section1">
+      <div class="slide_banner">slide_banner</div>
+      <div class="side_banner">side_banner</div>
+    </div><!-- .section1-->
+    <div class="section2">
+      <div class="hit_product">
+        <ul>
+          <li><a href="#1">hit_product1</a></li>
+          <li><a href="#2">hit_product2</a></li>
+          <li><a href="#3">hit_product3</a></li>
+          <li><a href="#4">hit_product4</a></li>
+        </ul>
+      </div>
+      <div class="md_product">
+        <ul>
+          <li><a href="#1">md_product1</a></li>
+          <li><a href="#2">md_product2</a></li>
+          <li><a href="#3">md_product3</a></li>
+          <li><a href="#4">md_product4</a></li>
+        </ul>
+      </div>
+    </div><!-- .section2 -->
+  </div><!-- #content -->
+  <footer>
+    <div class="office_logo">office_logo</div>
+    <div class="office_address">office_address</div>
+    <div class="shopping_info">shopping_info</div>
+    <div class="copyright">Copyright ⓒ Joeun System Corp. All rights reserved.</div>
+  </footer>
 </body>
 </html>
