--- a/Source/02_HTML_CSS/ch05_CSS속성/quiz_back.html
+++ b/Source/02_HTML_CSS/ch05_CSS속성/quiz_back.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
   <title>기본 + 백그라운드 이미지</title>
-  <link href="quiz.css" rel="stylesheet">
+  <link href="quiz_back.css" rel="stylesheet">
 </head>
 <body>
-  <div id="container">
+  <div id="container">  
+    <div id="background_image"></div>  
     <div id="header">HEADER</div>
     <div id="nav">
       <p>NAVIGATION</p>
