--- a/Source/02_HTML_CSS/ch08_CSS3반응형웹/1_link.html
+++ b/Source/02_HTML_CSS/ch08_CSS3반응형웹/1_link.html
@@ -4,34 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
   <title></title>
-  <link href="css/content-screen.css" rel="stylesheet" type="text/css" media="screen"/>
-  <link href="css/title.css" rel="stylesheet" type="text/css" />
-  <link href="css/content-print.css" rel="stylesheet" type="text/css" media="print"/>
-  <link href="css/footer.css" rel="stylesheet" type="text/css" />
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Dongle&display=swap');
-    @import url(CSS/title.css);
-    @import url(CSS/footer.css); 
-    @media screen {
-      #wrap .content{
-    color: darkgreen;
-    padding: 10px;
-    font-size: 1.5em;
-    }
-    }
-    #wrap .content{
-    background-color: darkgreen;
-    color:white;
-    padding: 10px;
-    font-size: 1.5em;
-   }
-    #wrap {
-        width: 800px;
-        margin: 0 auto;
-        border: 2px solid black;
-        padding: 10px;
-    }   
-  </style>
+  <link href="css/title.css" rel="stylesheet">
+  <link href="css/content-screen.css" rel="stylesheet" media="screen">
+  <link href="css/content-print.css" rel="stylesheet" media="print">
+  <link href="css/footer.css" rel="stylesheet">
 </head>
 <body>
   <div id="wrap">
