--- a/Source/02_HTML_CSS/ch08_CSS3반응형웹/2_규칙.html
+++ b/Source/02_HTML_CSS/ch08_CSS3반응형웹/2_규칙.html
@@ -4,10 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
   <title></title>
-  <link href="css/content-screen.css" rel="stylesheet" type="text/css" media="screen"/>
-  <link href="css/title.css" rel="stylesheet" type="text/css" />
-  <link href="css/content-print.css" rel="stylesheet" type="text/css" media="print"/>
-  <link href="css/footer.css" rel="stylesheet" type="text/css" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Dongle&display=swap');
+    @import url(css/title.css);
+    @import url(css/footer.css);
+    @media screen {
+      /* 스크린용 css(content-screen.css내용. import 적용불가) */
+      #wrap .content{
+        background-color: darkgreen;
+        color:white;
+        padding: 10px;
+        text-align: justify; /* 양쪽 정렬*/
+      }
+    }
+    @media print { /* print용 css(content-print.css내용)*/
+      #wrap .content{
+        color : darkgreen;
+        padding: 10px;
+        font-size: 1.5em;
+      }
+    }
+  </style>
 </head>
 <body>
   <div id="wrap">
