--- a/Source/03_JavaScript/ch06_객체/2_객체의속성과메소드.html
+++ b/Source/03_JavaScript/ch06_객체/2_객체의속성과메소드.html
@@ -17,7 +17,7 @@
     document.write(person.name + '님' + person['age'] + '<br>');
     document.write(person.eat + '<br>');
     document.writeln(person + '<br>');
-    document.writeln(person.to)
+    document.writeln(person.toString());
   </script>
 </head>
 <body>
