--- a/Source/03_JavaScript/ch08_기본객체/5_Date내장함수.html
+++ b/Source/03_JavaScript/ch08_기본객체/5_Date내장함수.html
@@ -14,6 +14,7 @@
     let openday = new Date(2025, 8, 11, 9, 30, 0);// 개강일(2025.9.11)
     //day = Math.floor( (now.getTime() - openday.getTime()) / (1000*60*60*24) );
     day = now.getNumberOfDays(openday);
+    document.writeln(day + '일 지남');
   </script>
 </head>
 <body>
