--- a/Source/03_JavaScript/ch09_브라우저객체/5_parent(small).html
+++ b/Source/03_JavaScript/ch09_브라우저객체/5_parent(small).html
@@ -5,18 +5,22 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
   <title></title>
   <script>
+    var child;
     const openChild = ()=>{
-      let child = open('5_child(large).html', '', 'width=500,height=610,left=500');
+      child = open('5_child(large).html', '', 'width=500,height=610,left=500');
       if(!child){
         alert('팝업 차단 해제 ');
       }
     };
+    // const closeChild = function(){
+    //   child.close();
+    // };
   </script>
 </head>
 <body>
   <h2>작은 그림의 parent창</h2>
   <img src="ch09_img/small.jpg" alt="작은그림" 
         onmouseover="openChild()"
-        onmouseout="closeChild()">
+        onmouseout="child.close()">
 </body>
 </html>
