--- a/Source/03_JavaScript/ch10_문서객체/2_문서객체가져오기4_tag.html
+++ b/Source/03_JavaScript/ch10_문서객체/2_문서객체가져오기4_tag.html
@@ -10,12 +10,15 @@
       // for(let idx=0 ; idx<header.length ; idx++){
       //   header[idx].innerHTML += '#'+idx;
       // }
-      // for(let idx  in header){
-      //   header[idx].innerHTML += '#'+idx;
-      // }
+      for(let idx  in header){
+        header[idx].innerHTML += '#'+idx;
+      }
       // for(let element of header){
       //   element.innerHTML = '바꿔';
       // }
+      // header.forEach(element => { // element에는 forEach() 사용불가
+      //   element.innerHTML = '바꿔';
+      // });
     };
   </script>
 </head>
